--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "@types/node": "^16.18.39",
     "@types/react": "^18.2.17",
     "@types/react-dom": "^18.2.7",
+    "@types/react-toastify": "^4.1.0",
     "@types/validator": "^13.11.5",
     "axios": "^1.5.0",
     "classnames": "^2.3.2",
