--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@types/react": "^18.2.17",
     "@types/react-dom": "^18.2.7",
     "@types/react-toastify": "^4.1.0",
+    "@types/slick-carousel": "^1.6.40",
     "@types/validator": "^13.11.5",
     "axios": "^1.5.0",
     "classnames": "^2.3.2",
@@ -23,7 +24,9 @@
     "react-redux": "^8.1.3",
     "react-router-dom": "^6.15.0",
     "react-scripts": "5.0.1",
+    "react-slick": "^0.29.0",
     "redux-persist": "^6.0.0",
+    "slick-carousel": "^1.8.1",
     "typescript": "^4.9.5",
     "validator": "^13.11.0",
     "web-vitals": "^2.1.4"
@@ -53,6 +56,7 @@
     ]
   },
   "devDependencies": {
+    "@types/react-slick": "^0.23.12",
     "tailwindcss": "^3.3.3"
   }
 }
