--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "@types/validator": "^13.11.5",
     "axios": "^1.5.0",
     "classnames": "^2.3.2",
+    "moment": "^2.29.4",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-redux": "^8.1.3",
