--- a/public/manifest.json
+++ b/public/manifest.json
@@ -1,6 +1,6 @@
 {
-  "short_name": "React App",
-  "name": "Create React App Sample",
+  "short_name": "Zest",
+  "name": "Get your healthy foods & snacks delivered at your doorsteps all day everyday",
   "icons": [
     {
       "src": "favicon.ico",
